// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start game a game with more than 2 players can be started by the host 1`] = `
Object {
  "data": Object {
    "lobbyStartGame": Object {
      "gameId": "g42",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`start game a player can't start a game if she's not the host 1`] = `
Object {
  "data": Object {
    "lobbyStartGame": Object {
      "type": "ONLY_HOST_CAN_START_GAME",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`start game a player can't start a game if she's not the host 2`] = `
Object {
  "data": Object {
    "lobbyStartGame": Object {
      "type": "ONLY_HOST_CAN_START_GAME",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`start game a player can't start a game if there is not enough player 1`] = `
Object {
  "data": Object {
    "lobbyStartGame": Object {
      "type": "NOT_ENOUGH_PLAYERS",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
